# commander-pod-deck-generation

./: .gitignore  CLAUDE.md  EDH-Collection-Deck-Builder-PRD.md  README.md  pyproject.toml
scripts/: validate_fixture_ids.py
src/: __init__.py  cli.py
src/brackets/: __init__.py  combo_detector.py  estimator.py  game_changers.py  rules.py
src/collection/: __init__.py  importer.py  models.py  resolver.py
src/commanders/: __init__.py  edhrec_client.py  suggester.py
src/deckbuilder/: __init__.py  allocator.py  builder.py  templates.py
src/export/: __init__.py  formatters.py
src/utils/: __init__.py  cache.py  scryfall.py
tests/: test_allocator.py  test_bracket_estimator.py  test_builder.py  test_cache.py  test_cli.py  test_combo_detector.py  test_commander_suggester.py  test_e2e_flow.py  test_edhrec_client.py  test_formatters.py  test_game_changers.py  test_importer.py  test_resolver.py  test_rules.py  test_scryfall.py
tests/fixtures/: sample_collection.csv  sample_collection_with_binder.csv
