[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edh-builder"
version = "0.1.0"
description = "Build 4 balanced Commander (EDH) decks from your card collection"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "requests>=2.31",
    "pyedhrec>=0.0.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
edh-builder = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
